Bug 304918 - [Timeline] and [search] not available if dolphin is starting during session restauration
Summary: [Timeline] and [search] not available if dolphin is starting during session r...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 320703 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-08-10 10:11 UTC by m.wege
Modified: 2013-06-04 13:44 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description m.wege 2012-08-10 10:11:55 UTC
I just noticed that the timeline and the search feature is not and does become available if dolphin is started "very early" (e.g. during startup). I suspect the reason is that it is not available yet when dolphin is started. That might be ok, if it became later available. But you have to restart dolphin otherwise it does not become available. It also means that setting timeline as homeurl does not make much sense.

Reproducible: Always
Comment 1 m.wege 2012-08-10 10:13:42 UTC
Just read that I should assign timeline-bugs to the timeline-component. In this case it may be also a dolphin bug.
Comment 2 Frank Reininghaus 2012-08-12 21:25:36 UTC
Thanks for the bug report! In this case, you might be right that the problem is not in the timeline kioslave.

The cause of the bug might be (as you say) that the Nepomuk server is not fully initialised yet when Dolphin starts, but restarting Dolphin should indeed not be required to fix this.
Comment 3 m.wege 2012-08-13 10:18:55 UTC
I have to add that the same problem occurs with the folderview desktop applet. So may be there could be a common solution.
Comment 4 Jeroen van Meeuwen (Kolab Systems) 2012-08-24 16:19:44 UTC
Resetting assignee to default as per bug #305719
Comment 5 m.wege 2013-01-12 20:19:51 UTC
Problem still exists in 4.10 RC2
Comment 6 Frank Reininghaus 2013-01-13 08:46:36 UTC
It will continue to exist in all future releases unless anyone has a good idea how to fix it. Unfortunately, I don't - checking periodically if the Nepomuk server has appeared in the meantime and then re-initalising the Places Panel and other things looks like a rather complex and resource-wasting solution to me.
Comment 7 m.wege 2013-01-13 09:31:03 UTC
Hmm, how about not checking if the Nepomuk-server is present on initialising the Places Panel but check if it is intended to be present? Either by configuration option or by checking if it Nepomuk is installed and by configuration intended to be running. If this is the case you could put those items in the panel. And could move the checking if the Nepomuk-server is present to the point when it is intended to be used. In that case this could be handled in a simular way than Kaddressbook waiting for Akonadi. "Waiting for Nepomuk to be present" until a timeout and then a button "Recheck", if that has failed. This could also solve the problem which occurs when timeline is made the homepage (via directly editing in the dolphin-configs because at the moment it can not be done directly, see my other bug report from yesterday) or is used in a plasma folderview (where the same problem occurs).
Comment 8 Frank Reininghaus 2013-01-14 09:17:42 UTC
(In reply to comment #7)
> Hmm, how about not checking if the Nepomuk-server is present on initialising
> the Places Panel but check if it is intended to be present? Either by
> configuration option or by checking if it Nepomuk is installed and by
> configuration intended to be running.

Might be possible (but no new config option for such a minor thing, please), but then I see the problem that users complain if the 'timeline' entries are shown, but do not work because something went wrong. But maybe it's more important to make the probably not-so-uncommon 'session restauration' use case work, I'm not sure.

> And could move the checking if the Nepomuk-server
> is present to the point when it is intended to be used. In that case this
> could be handled in a simular way than Kaddressbook waiting for Akonadi.
> "Waiting for Nepomuk to be present" until a timeout and then a button
> "Recheck", if that has failed. 

Im not really in favor of adding more checks to Dolphin. If a 'timeline' URL is opened and it doesn't work, then it doesn't work. No need for us to check if it won't work before applying the URL to the view.

The KAddressBook/Akonadi comparison is IMHO not valid because KAdressBook does not work at all without Akonadi.

> This could also solve the problem which
> occurs when timeline is made the homepage (via directly editing in the
> dolphin-configs because at the moment it can not be done directly, see my
> other bug report from yesterday) or is used in a plasma folderview (where
> the same problem occurs).

Note that Dolphin and FolderView have basically nothing in common (except for the fact that they rely on KDirLister and Qt, obviously). So any 'fix' in Dolphin would have zero effect on the FolderView plasmoid.
Comment 9 Vishesh Handa 2013-05-06 20:15:10 UTC
Git commit 24609e78f87440606ce44d4f2559c4587fbd0e22 by Vishesh Handa.
Committed on 06/05/2013 at 15:11.
Pushed by vhanda into branch 'KDE/4.10'.

Dolphin Places: React to Nepomuk system changes

Reload the places panel when Nepomuk starts up and shutsdown. This way
the user does not need to restart Dolphin to see the custom searches and
places after Nepomuk switches on.
REVIEW: 110323

M  +9    -0    dolphin/src/kitemviews/kstandarditemmodel.cpp
M  +1    -0    dolphin/src/kitemviews/kstandarditemmodel.h
M  +39   -1    dolphin/src/panels/places/placesitemmodel.cpp
M  +3    -0    dolphin/src/panels/places/placesitemmodel.h

http://commits.kde.org/kde-baseapps/24609e78f87440606ce44d4f2559c4587fbd0e22
Comment 10 Frank Reininghaus 2013-06-04 10:32:27 UTC
*** Bug 320703 has been marked as a duplicate of this bug. ***
Comment 11 m.wege 2013-06-04 11:01:47 UTC
(In reply to comment #9)
> Git commit 24609e78f87440606ce44d4f2559c4587fbd0e22 by Vishesh Handa.
> Committed on 06/05/2013 at 15:11.
> Pushed by vhanda into branch 'KDE/4.10'.
> 
> Dolphin Places: React to Nepomuk system changes
> 
> Reload the places panel when Nepomuk starts up and shutsdown. This way
> the user does not need to restart Dolphin to see the custom searches and
> places after Nepomuk switches on.
> REVIEW: 110323
Could this fix be also applied to folderview on the Plasma desktop?
Comment 12 Frank Reininghaus 2013-06-04 13:44:53 UTC
> Could this fix be also applied to folderview on the Plasma desktop?

You might want to ask the Folderview people.